--- a/CustomVideoRender/src/main/res/layout/activity_video_render_type.xml
+++ b/CustomVideoRender/src/main/res/layout/activity_video_render_type.xml
@@ -31,15 +31,15 @@
                 android:id="@+id/RadioDecodeRGB"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:checked="true"
                 android:text="decodeRGB"/>
 
             <RadioButton
+                android:enabled="false"
                 android:id="@+id/RadioDecodeYUV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="decodeYUV" />
-
-
 
         </RadioGroup>
     </LinearLayout>
@@ -51,6 +51,15 @@
         android:layout_marginTop="10dp"
         android:text="@string/tx_start_live"
         android:onClick="JumpPublish"
-        android:textAllCaps="false"/>
+        android:textAllCaps="false" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="10dp"
+        android:text="FaceUnity"
+        android:onClick="faceUnity"
+        android:textAllCaps="false" />
 
 </LinearLayout>
+
